# easy-21

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
notebook/: 01_mc_control_convergence.ipynb  02_mc_control_exploration_rate.ipynb  03_mc_control_sample_variance.ipynb  04_td_lambda_forward_lambda_value.ipynb  05_td_lambda_forward_off_policy.ipynb  06_linear_approximator_convergence.ipynb  07_linear_approximator_control.ipynb  08_linear_approximator_sample_size.ipynb  09_linear_approximator_features.ipynb  10_dual_agent_mc_control.ipynb
speed/: approximator_vs_map.py  value_network_vs_approximator.py
src/: approximator_convergence.py  approximator_on_batch_size.py  approximator_on_feature.py  approximator_on_lambda.py  approximator_on_off_policy.py  approximator_performance.py  backward_td_lambda_control.py  feature_function.py  forward_td_lambda_control.py  game.py  mc-control.ipynb  mc_control.py  optimal_action_values.json  plot.py  q_learning_forward.py  study_exploration_rate.py  td_backward_lambda_control.py  td_control.py  td_control_with_approximator.py  td_forward_lambda_control.py  td_learning.py  value_approximator.py  value_map.py  with_approximator.py
study/: dual_agent_information_difference.py  dual_agent_mc_control.py  dual_agent_optimal.py  linear_approximator_control.py  linear_approximator_convergence.py  linear_approximator_features.py  linear_approximator_sample_size.py  mc_control_converge.py  mc_control_exploration_rate.py  mc_control_partial_plot.py  mc_control_sample_variance.py  td_lambda_backward_control.py  (+5 more)
(+54 files in other folders)
