[tool.poetry]
name = "rl-coursework"
version = "0.1.0"
description = ""
authors = ["Zhenyu Lin <zhenyu.lyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.10"
pytest-timeout = "^1.4.2"
tqdm = "^4.51.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.0"
jupyterthemes = "^0.20.0"
notebook = "^6.0.3"
jupyter-tabnine = "^1.1.0"
black = "^19.10b0"
pytest = "*"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
