[tool.poetry]
name = "rl-coursework"
version = "0.1.0"
description = ""
authors = ["Zhenyu Lin <zhenyu.lyn@gmail.com>"]

[tool.poetry.dependencies]
matplotlib = "^3.3.2"
micrograd = "^0.1.0"
pandas = "^1.1.4"
python = "^3.9.7"
seaborn = "^0.11.0"
tinygrad = "^0.3.0"
tqdm = "^4.51.0"
pyopencl = "^2022.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipykernel = "^5.3.0"
jupyter-tabnine = "^1.1.0"
jupyterthemes = "^0.20.0"
notebook = "^6.0.3"
pytest = "*"
pytest-cov = "^2.10.1"
pytest-picked = "^0.4.4"
pytest-timeout = "^1.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
